# sons02-demo01

./: .gitignore  README.md
backend/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py  seed.py
backend/app/api/: auth.py  clients.py  contracts.py  dashboard.py  employees.py  engineers.py  invoices.py  projects.py  router.py  users.py  work_records.py
backend/app/core/: config.py  crypto.py  deps.py  okta.py  security.py
backend/app/crud/: base.py  billing.py  dashboard.py  gross_profit.py  invoice.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  _types.py  client.py  contract.py  employee.py  engineer.py  enums.py  invoice.py  project.py  user.py  work_record.py
backend/app/schemas/: auth.py  client.py  common.py  contract.py  dashboard.py  employee.py  engineer.py  invoice.py  project.py  user.py  work_record.py
backend/docs/evidence/: integration-console.txt  junit_all.xml  junit_integration.xml  junit_unit.xml  unit_console.txt
backend/tests/: conftest.py  test_billing.py  test_crypto.py  test_dateutil.py  test_deps.py  test_rounding.py  test_security.py
backend/tests/integration/: conftest.py  test_auth.py  test_contracts_billing.py  test_dashboard.py  test_employees.py  test_engineers.py  test_flows.py
cdk/: cdk.context.json  package-lock.json  package.json  tsconfig.json
docs/: OKTA_SETUP.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  (+2 more)
(+43 files in other folders)
